# documentation-parser

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
src/: api.py  handlers.py  messagebus.py  mock_adapter.py  models.py  settings.py
src/domain/: events.py  models.py
src/model/: __init__.py  messagebus.py  models.py
src/services/: handlers.py  messagebus.py  repository.py  settings.py
src/templates/: docs.html  documentation.html
tests/: test_directory_mannager.py  test_messagebus.py  test_tree.py
tests/integration/: test_db_connection.py
tests/unit/: test_messagebus.py  test_tree.py
