[tool.poetry]
name = "documentation-parser-agent"
version = "0.1.0"
description = ""
authors = ["ericcardozo <eric.m.cardozo@mi.unc.edu.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.1"
pytest = "^8.0.1"
requests = "^2.31.0"
lxml = "^5.1.0"
gitpython = "^3.1.42"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pydantic-settings = "^2.2.0"


[tool.poetry.group.tests.dependencies]
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
